# c-d3d11

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: core.h.3A73526FFA2E4D37.idx  main.c.F20F3196F6AB30B6.idx
resources/: shader_green_color.fx
src/: main.c
